--- a/src/styles/pages/login.module.scss
+++ b/src/styles/pages/login.module.scss
@@ -4,10 +4,9 @@
   display: flex;
   flex-direction: column;
   gap: 1rem;
-  height: 100vh;
+  height: 100%;
   justify-content: center;
   position: relative;
-  padding: 1rem;
   text-transform: uppercase;
   width: 100%;
 
@@ -20,11 +19,11 @@
     width: 100%;
 
     & h1 {
-      filter: blur(2px);
-      font-size: 9.75rem;
+      filter: blur(1px);
+      font-size: 18vw;
       font-weight: 700;
       font-style: normal;
-      letter-spacing: -1rem;
+      letter-spacing: -2.2vw;
       text-transform: uppercase;
       display: flex;
       gap: 8px;
@@ -45,7 +44,7 @@
     max-width: 300px;
     text-transform: uppercase;
     padding: 1rem;
-    width: 25%;
+    width: 100%;
     transition: background-color 0.2s ease-in-out;
 
     &:hover {
