--- a/src/styles/pages/login.module.scss
+++ b/src/styles/pages/login.module.scss
@@ -1,59 +1,52 @@
 .login {
-  align-items: center;
-  box-sizing: border-box;
-  display: flex;
-  flex-direction: column;
-  gap: 1rem;
-  height: 100%;
-  justify-content: center;
-  position: relative;
-  text-transform: uppercase;
   width: 100%;
+  height: 100%;
 
-  &__signIn {
-    align-items: center;
+  grid-column: 1/-1;
+  grid-row: 1/-2;
+  place-content: center;
+
+  &__title {
     display: flex;
-    flex-direction: column;
     justify-content: center;
-    padding: 0rem 2rem;
-    width: 100%;
 
-    & h1 {
-      filter: blur(1px);
-      font-size: 18vw;
-      font-weight: 700;
-      font-style: normal;
-      letter-spacing: -2.2vw;
-      text-transform: uppercase;
-      display: flex;
-      gap: 8px;
-    }
-  }
-
-  & button {
-    align-items: center;
-    background-color: #2e2e2e;
-    border: none;
-    border-radius: 4px;
-    color: #e8e8e8;
-    display: flex;
-    font-weight: 600;
-    gap: 4px;
-    justify-content: center;
-    letter-spacing: -0.06em;
-    max-width: 300px;
+    filter: blur(1px);
+    font-size: 10vw;
+    font-weight: 500;
+    font-style: normal;
+    letter-spacing: -2.2vw;
     text-transform: uppercase;
-    padding: 1rem;
-    width: 100%;
-    transition: background-color 0.2s ease-in-out;
-
-    &:hover {
-      background-color: #18181b;
-      cursor: pointer;
-    }
+    gap: 8px;
   }
 
-  & > div {
-    border-radius: 4px;
+  &__action {
+    width: 100%;
+    display: flex;
+    justify-content: center;
+
+    & button {
+      align-items: center;
+      background-color: #2e2e2e;
+      border: none;
+      border-radius: 4px;
+      color: white;
+      display: flex;
+      font-weight: 600;
+      gap: 4px;
+      justify-content: center;
+      letter-spacing: -0.06em;
+      max-width: 270px;
+      text-transform: uppercase;
+      padding: 1rem;
+      place-self: center;
+      width: 100%;
+      transition: background-color 0.2s ease-in-out;
+
+      &:hover {
+        background-color: #3aa038;
+        cursor: pointer;
+        mix-blend-mode: difference;
+      }
+    }
   }
 }
