app layout style adjustments

--- a/src/styles/components/AppBorder.module.scss
+++ b/src/styles/components/AppBorder.module.scss
@@ -14,6 +14,8 @@
   transform: translate(0px, 0px);
   transition: 0.5s transform ease-out;
   width: calc(100% - var(--border-width) * 2);
+  display: flex;
+  flex-direction: column;
 
   @media screen and (max-width: $smBreakpoint) {
     --border-width: 0px;
