--- a/src/styles/pages/home.module.scss
+++ b/src/styles/pages/home.module.scss
@@ -1,20 +1,5 @@
 @use "@/styles/variables/breakpoints.scss" as *;
 
-.page {
-  display: grid;
-  grid-template-columns: repeat(5, minmax(0, 1fr));
-  grid-template-rows: auto 1fr auto;
-  width: 100%;
-  height: calc(100% - calc(var(--border-width) * 6));
-  position: relative;
-
-  @media screen and (max-width: $smBreakpoint) {
-    grid-template-columns: 3fr;
-    grid-template-rows: auto 1fr auto;
-    height: 93%;
-  }
-}
-
 .blendify {
   display: flex;
   flex-direction: column-reverse;
@@ -129,7 +114,7 @@
 }
 
 .headphones {
-  position: absolute;
+  position: fixed;
   bottom: -10%;
   width: 100%;
   height: 150%;
@@ -137,5 +122,10 @@
   transform: rotate(15deg);
   opacity: 0.6;
   pointer-events: none;
-  z-index: 0;
+  z-index: -10000000;
+
+  & canvas {
+    z-index: -100000;
+    touch-action: none;
+  }
 }
