initial tracks page
audio player with playback src control

removing  app border and reworking page layout

patching up filters and active styles

patching up stale tokens with refresh token

organizing selected track meta

cleaning up audio player

updating spotify

updating spotify

type security for API

rework page to to useContext

rework styles

new carousel component

making minor style tweaks

finalizing track view

drop in header

tweaking pfp size & conditional logic

config stuff

style tweaks

use image panels as links

enable rotate on headphones

removing dead components

add stagger animation to child items

add stagger animation to child items

cleanup

--- a/src/components/PlayPauseControl/PlayPauseControl.module.scss
+++ b/src/components/PlayPauseControl/PlayPauseControl.module.scss
@@ -10,6 +10,7 @@ button.toggleButton {
   transition: content 100ms ease-out;
   border: none;
   cursor: pointer;
+  color: inherit;
 
   svg {
     width: 1rem;
