--- a/src/styles/components/Header.module.scss
+++ b/src/styles/components/Header.module.scss
@@ -6,19 +6,22 @@ $border-radius: 4px;
 .header {
   align-items: center;
   display: flex;
-  font-size: 16px;
+  font-size: 12px;
   font-weight: 500;
   justify-content: space-between;
-  text-transform: uppercase;
-  z-index: 10;
+  justify-self: center;
+  z-index: 1000;
   flex-grow: 1;
   width: 100%;
+  top: 1rem;
+  padding: 0 1rem;
+  position: absolute;
+  user-select: none;
 
   &__left {
     align-items: center;
     display: flex;
     gap: 8px;
-    letter-spacing: -2px;
 
     a {
       transition: all 200ms ease-in-out;
