--- a/src/styles/components/page.module.scss
+++ b/src/styles/components/page.module.scss
@@ -1,57 +1,30 @@
 @use "@/styles/variables/breakpoints.scss" as *;
+@use "@/styles/variables/colors.scss" as *;
 
 .page {
-  display: grid;
-  grid-template-columns: repeat(5, minmax(0, 1fr));
-  grid-template-rows: auto 1fr auto;
   width: 100%;
   height: 100%;
-  position: relative;
-  padding-top: 6rem;
-
-  @media screen and (max-width: $smBreakpoint) {
-    grid-template-columns: 3fr;
-    grid-template-rows: auto 1fr auto;
-    height: 100%;
-  }
-}
-
-.nav {
-  position: absolute;
   text-transform: uppercase;
-  top: 6rem;
-  cursor: pointer;
-  z-index: 10;
-  opacity: 0;
-  transition: opacity 0.3s ease;
-  animation: 2s fadeIn 0.5s forwards;
+  display: flex;
+  flex-direction: column;
+  padding: 0.5rem;
+  position: fixed;
 
-  a {
-    display: flex;
+  & > :first-child {
     width: 100%;
-    align-items: center;
-    justify-content: flex-start;
-    transition: opacity 0.3s ease, transform 0.3s ease;
-
-    &:hover {
-      opacity: 0.6;
-    }
-    &:active {
-      transform: scale(0.95);
-    }
+    height: 100%;
+    position: relative;
+    border-radius: 1rem;
+    background-color: #131314;
+    overflow: hidden;
   }
-
-  .icon {
-    width: 1.5rem;
-    height: 1rem;
-  }
-
-  @keyframes fadeIn {
-    0% {
-      opacity: 0;
-    }
-    100% {
-      opacity: 1;
-    }
+  .backLink {
+    position: absolute;
+    display: flex;
+    left: 1rem;
+    z-index: 10;
+    top: 8rem;
+    font-size: 12px;
+    font-weight: 500;
   }
 }
