--- a/src/styles/globals.scss
+++ b/src/styles/globals.scss
@@ -1,5 +1,3 @@
-$appBorderWidth: 6px;
-
 @font-face {
   font-family: "General Sans";
   src: url("/fonts/GeneralSans-Variable.woff2") format("woff2"),
@@ -13,7 +11,7 @@ $appBorderWidth: 6px;
 
 @media (prefers-color-scheme: dark) {
   :root {
-    --background: #131314;
+    // --background: #131314;
     --foreground: #ededed;
   }
 }
@@ -22,14 +20,13 @@ html,
 body {
   height: 100%;
   overflow-x: hidden;
-  max-width: 100vw;
-  user-select: none;
   letter-spacing: -0.06em;
+  line-height: 0.8;
+  color-scheme: dark;
 }
 
 body {
   background: var(--background);
-  border-radius: 15px;
   color: var(--foreground);
 
   font-family: General Sans, Arial, Helvetica, sans-serif;
@@ -38,8 +35,11 @@ body {
 
   box-sizing: border-box;
   position: relative;
-  padding: calc(1% - var(--border-width) * 2);
   overflow: hidden;
+
+  img {
+    border-radius: 4px;
+  }
 }
 
 * {
@@ -56,9 +56,4 @@ a {
   html {
     color-scheme: dark;
   }
-}
-
-.page-container {
-  width: 100%;
-  height: 100%;
 }
