--- a/src/styles/pages/home.module.scss
+++ b/src/styles/pages/home.module.scss
@@ -3,14 +3,13 @@
 .blendify {
   display: flex;
   flex-direction: column-reverse;
-  grid-column: 1 / -1;
-  grid-row: 3 / 3;
   text-transform: uppercase;
-  line-height: 0.8;
   z-index: 20;
   color: white;
   mix-blend-mode: difference;
-  pointer-events: none;
+  position: absolute;
+  left: 1.5rem;
+  bottom: 1.5rem;
 
   &__title {
     font-size: 15vw;
@@ -33,10 +32,11 @@
 
 .panels {
   width: calc(100% - 28vw);
-  grid-column: 1 / -1;
-  grid-row: 1 / span 3;
+  height: 100%;
   display: flex;
-  z-index: 40;
+  z-index: 20;
+  position: relative;
+  margin-left: 1.5rem;
 
   @media screen and (max-width: $smBreakpoint) {
     grid-column: 1 / -1;
@@ -66,7 +66,7 @@
       font-size: 20px;
       font-weight: 600;
       text-transform: uppercase;
-      transition: all 300ms cubic-bezier(0.25, 0.46, 0.45, 0.94);
+      transition: all 200ms cubic-bezier(0.25, 0.46, 0.45, 0.94);
       width: 100%;
     }
 
@@ -114,18 +114,11 @@
 }
 
 .headphones {
-  position: fixed;
-  bottom: -10%;
+  position: absolute;
+  bottom: -20%;
   width: 100%;
-  height: 150%;
+  height: 150vh;
   right: -30%;
   transform: rotate(15deg);
   opacity: 0.6;
-  pointer-events: none;
-  z-index: -10000000;
-
-  & canvas {
-    z-index: -100000;
-    touch-action: none;
-  }
 }
