--- a/src/styles/pages/login.module.scss
+++ b/src/styles/pages/login.module.scss
@@ -1,9 +1,10 @@
 .login {
   width: 100%;
   height: 100%;
+  display: flex;
+  flex-direction: column;
+  gap: 4rem;
 
-  grid-column: 1/-1;
-  grid-row: 1/-2;
   place-content: center;
 
   &__title {
