--- a/src/components/Carousel/ArtistItem.module.scss
+++ b/src/components/Carousel/ArtistItem.module.scss
@@ -2,8 +2,25 @@
   width: 350px;
   position: relative;
 
-  img {
+  &__image {
+    height: 350px;
+    width: 350px;
+    overflow: hidden;
+    border-radius: 4px;
     margin-bottom: 1rem;
+
+    img {
+      transition: all 800ms ease-out;
+      transform-origin: center;
+      object-fit: cover;
+      transform: scale(1);
+    }
+  }
+
+  &:hover {
+    & img {
+      transform: scale(1.05);
+    }
   }
 
   &__info {
@@ -14,6 +31,7 @@
     font-weight: 400;
     line-height: 100%;
     margin-bottom: 1rem;
+    width: 100%;
 
     & > :first-child {
       font-size: 20px;
@@ -24,6 +42,7 @@
       text-overflow: ellipsis;
       overflow: hidden;
       white-space: nowrap;
+      width: 100%;
     }
   }
 
