--- a/src/components/PieChart/PieChart.module.scss
+++ b/src/components/PieChart/PieChart.module.scss
@@ -11,10 +11,11 @@
   .tooltip {
     position: absolute;
     pointer-events: none;
-    background-color: white;
+    background-color: rgba(255, 255, 255, 0.725);
     padding: 8px 16px;
     border-radius: 8px;
     box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+    backdrop-filter: blur(10px);
     font-weight: 600;
     color: #4a4a4a;
 
