--- a/src/styles/components/page.module.scss
+++ b/src/styles/components/page.module.scss
@@ -17,6 +17,8 @@
     border-radius: 1rem;
     background-color: #131314;
     overflow: hidden;
+    display: flex;
+    justify-content: center;
   }
   .backLink {
     position: absolute;
