--- a/src/styles/pages/genres.module.scss
+++ b/src/styles/pages/genres.module.scss
@@ -42,7 +42,7 @@ $selectedColor: #ffb327;
     width: 100%;
     height: 100%;
     display: flex;
-    align-items: center;
+    // align-items: center;
     padding-left: 10rem;
     padding-right: 8rem;
     padding-top: 4rem;
@@ -52,10 +52,11 @@ $selectedColor: #ffb327;
     font-weight: 500;
 
     & .content {
-      display: flex;
-      gap: 4rem;
+      justify-content: space-between;
+      gap: 2rem;
       width: 100%;
       height: 100%;
+      display: flex;
 
       & > * {
         width: 100%;
@@ -65,46 +66,6 @@ $selectedColor: #ffb327;
         max-width: 500px;
       }
     }
-
-    & ol {
-      margin-block-start: 0em;
-      margin-block-end: 0em;
-      padding-inline-start: 1.5rem;
-      font-weight: 600;
-      margin: 2rem 0;
-      border-top: 1px dotted rgba(255, 255, 255, 0.1);
-      border-bottom: 1px dotted rgba(255, 255, 255, 0.1);
-      padding-top: 1rem;
-      padding-bottom: 1rem;
-      height: 140px;
-    }
-
-    & li {
-      div {
-        display: flex;
-        justify-content: space-between;
-        position: relative;
-        width: 100%;
-        height: 100%;
-        font-size: 1rem;
-        line-height: 1;
-      }
-
-      &:hover {
-        cursor: pointer;
-      }
-      &:not(:hover) {
-        opacity: 0.8;
-      }
-    }
-  }
-
-  &__chart {
-    width: fit-content;
-    display: flex;
-    align-items: center;
-    height: fit-content;
-    justify-content: center;
   }
 
   &__filters {
@@ -114,61 +75,11 @@ $selectedColor: #ffb327;
     z-index: 40000;
     position: absolute;
   }
-}
 
-.recs {
-  display: flex;
-  gap: 1rem;
-  width: 100%;
-  margin-bottom: 8rem;
-  position: relative;
-
-  img {
-    transition: all 200ms ease-out;
-    width: 80px;
-    height: 80px;
-    border-radius: 4px;
-  }
-
-  & .rec {
+  &__chart {
+    width: 100%;
     display: flex;
-    flex-direction: column;
-    text-overflow: ellipsis;
-    white-space: nowrap;
-    position: relative;
-    line-height: 1;
-  }
-
-  .selectedRec {
-    position: absolute;
-    left: 0;
-    top: 120%;
-    display: flex;
-    justify-content: space-between;
-    flex-direction: column;
-    text-overflow: ellipsis;
-    white-space: nowrap;
-    line-height: 1;
-
-    & > :last-child {
-      display: flex;
-      justify-content: space-between;
-      align-items: flex-end;
-      gap: 4rem;
-
-      & > :first-child {
-        margin-top: 1rem;
-      }
-    }
-
-    .icon {
-      width: 16px;
-      height: 16px;
-    }
-
-    p {
-      opacity: 0.8;
-    }
+    justify-content: flex-end;
   }
 }
 
@@ -180,4 +91,10 @@ $selectedColor: #ffb327;
 
 .selectedGenre {
   color: $selectedColor;
+}
+
+.filters {
+  position: absolute;
+  right: -2rem;
+  top: -1rem;
 }
