reworked home page

--- a/src/styles/components/page.module.scss
+++ b/src/styles/components/page.module.scss
@@ -15,7 +15,8 @@
     height: 100%;
     position: relative;
     border-radius: 1rem;
-    background-color: #131314;
+    background-color: #4b4b43;
+
     overflow: hidden;
     display: flex;
     justify-content: center;
