--- a/src/styles/pages/home.module.scss
+++ b/src/styles/pages/home.module.scss
@@ -1,124 +1,69 @@
 @use "@/styles/variables/breakpoints.scss" as *;
 
-.blendify {
+.home {
+  align-items: center;
   display: flex;
-  flex-direction: column-reverse;
-  text-transform: uppercase;
-  z-index: 20;
-  color: white;
-  mix-blend-mode: difference;
-  position: absolute;
-  left: 1.5rem;
-  bottom: 1.5rem;
+  flex-direction: column;
+  justify-content: center;
+  position: relative;
+  user-select: none;
 
-  &__title {
-    font-size: 15vw;
-    letter-spacing: -0.08em;
-    transition: all 0.4s ease-in-out;
-    letter-spacing: -1.8vw;
+  .desc {
+    font-weight: 500;
+    font-size: 1rem;
+    margin-bottom: 0.75rem;
   }
 
-  &__desc {
-    width: 75%;
-  }
-
-  & h1 {
+  h1.blendify {
     margin: 0;
     margin-block-start: 0;
     margin-inline-start: -1vw;
+    font-size: 8vw;
+    font-weight: bold;
     display: inline-flex;
-  }
-}
-
-.panels {
-  width: calc(100% - 28vw);
-  height: 100%;
-  display: flex;
-  z-index: 20;
-  position: relative;
-  margin-left: 1.5rem;
-
-  @media screen and (max-width: $smBreakpoint) {
-    grid-column: 1 / -1;
-    grid-row: 1 / span 2;
-    display: grid;
-    gap: 1rem;
-    grid-template-columns: repeat(2, auto);
-    grid-template-rows: repeat(2, 200px);
-    width: 100%;
-    align-self: end;
-    padding-bottom: 4rem;
+    letter-spacing: -0.12em;
+    user-select: none;
   }
 
-  .panel {
-    height: 100%;
-    width: 100%;
-    position: relative;
-    border-radius: 0.5rem;
-    overflow: hidden;
-    transition: all 300ms ease-in-out;
+  .headphones {
+    width: 300px;
+    height: 300px;
+    margin-top: -15%;
+  }
 
-    &__label {
-      position: absolute;
-      top: 40%;
-      left: 0;
-      color: white;
-      font-size: 20px;
-      font-weight: 600;
-      text-transform: uppercase;
-      transition: all 200ms cubic-bezier(0.25, 0.46, 0.45, 0.94);
-      width: 100%;
-    }
+  .links {
+    display: flex;
+    gap: 16px;
+    margin-bottom: 2.5rem;
+  }
 
-    img {
-      transition: opacity 200ms ease-in-out;
-      opacity: 0;
-      filter: blur(1px);
-      height: 100%;
-      width: 100%;
-      object-fit: cover;
-      object-position: center;
-    }
-
-    @media screen and (max-width: $smBreakpoint) {
-      img {
-        opacity: 1;
-      }
-
-      &__label {
-        top: 85%;
-        left: 2%;
-      }
-    }
+  .button {
+    display: flex;
+    padding: 8px 16px;
+    justify-content: center;
+    align-items: center;
+    gap: 16px;
+    border-radius: 2rem;
+    border: 1px solid rgb(245, 242, 236);
+    background: rgba(24, 24, 27, 0.1);
+    backdrop-filter: blur(8px);
+    font-weight: 500;
+    font-size: 0.75rem;
+    letter-spacing: normal;
+    transition: all 100ms cubic-bezier(0.25, 1, 0.5, 1);
 
     &:hover {
-      cursor: pointer;
-
-      img {
-        opacity: 0.6;
-      }
-
-      .panel__label {
-        top: 42.5%;
-        left: 0;
-      }
-
-      @media screen and (max-width: $smBreakpoint) {
-        .panel__label {
-          top: 85%;
-          left: 2%;
-        }
-      }
+      background: rgba(24, 24, 27, 0.2);
+      scale: 1.05;
+      text-decoration: underline;
     }
   }
-}
 
-.headphones {
-  position: absolute;
-  bottom: -20%;
-  width: 100%;
-  height: 150vh;
-  right: -30%;
-  transform: rotate(15deg);
-  opacity: 0.6;
+  p {
+    font-size: 1rem;
+    font-weight: 500;
+    margin-bottom: 1rem;
+    letter-spacing: normal;
+    opacity: 0.8;
+  }
 }
