--- a/src/components/Carousel/Carousel.module.scss
+++ b/src/components/Carousel/Carousel.module.scss
@@ -1,8 +1,6 @@
 .carouselContainer {
   overflow: hidden;
   width: 100%;
-  position: absolute;
-  height: 100%;
 }
 
 .carousel {
@@ -16,6 +14,7 @@
   gap: 5rem;
   padding-left: 10rem;
   padding-right: 10rem;
+  padding-bottom: 2rem;
 }
 
 .carouselItem {
