--- a/src/components/Carousel/TrackItem.module.scss
+++ b/src/components/Carousel/TrackItem.module.scss
@@ -1,59 +1,65 @@
+$imageWidth: 250px;
+
 .trackItem {
-  width: 350px;
-  position: relative;
+  display: flex;
+  flex-direction: column;
+  gap: 0.75rem;
+  width: $imageWidth;
+  transition: transform 0.2s cubic-bezier(0.83, 0, 0.17, 1);
 
-  img {
-    margin-bottom: 1rem;
-  }
-
-  &__info {
+  &__name {
+    font-size: 1.25rem;
+    font-weight: 500;
+    line-height: 80%;
+    letter-spacing: -1px;
+    white-space: nowrap;
     text-overflow: ellipsis;
     overflow: hidden;
-    white-space: nowrap;
-    font-size: 14px;
-    font-weight: 400;
-    line-height: 100%;
-    margin-bottom: 1rem;
-
-    & > :first-child {
-      font-size: 20px;
-      font-style: normal;
-      font-weight: 600;
-      letter-spacing: -1.5px;
-      line-height: 140%;
-      text-overflow: ellipsis;
-      overflow: hidden;
-      white-space: nowrap;
-    }
   }
 
-  a {
+  &__album {
+    font-size: 0.75rem;
+    letter-spacing: normal;
+    font-weight: 400;
+    opacity: 0.6;
+    width: $imageWidth;
     white-space: nowrap;
     text-overflow: ellipsis;
+    overflow: hidden;
+  }
 
-    & :hover {
-      text-decoration: underline;
-    }
+  &__image {
+    width: $imageWidth;
+    height: $imageWidth;
+    overflow: hidden;
+    border-radius: 4px;
+    z-index: 5;
 
     img {
-      width: 16px;
-      height: 16px;
-      object-fit: cover;
-      object-position: center;
-      margin: 0;
+      transition: all 300ms cubic-bezier(0.465, 0.04, 0, 0.975); /* custom */
+    }
+
+    &:hover {
+      img {
+        transform: scale(1.05);
+      }
     }
   }
-}
 
-.lightText {
-  opacity: 0.6;
-  overflow: hidden;
-  white-space: nowrap;
-  text-overflow: ellipsis;
-}
+  &__audioPlayer {
+    width: 100%;
+    // transition: transform 0.1s ease-in-out;
+    transition: transform 400ms cubic-bezier(0.83, 0, 0.17, 1),
+      filter 400ms cubic-bezier(0.83, 0, 0.17, 1);
 
-.trackPreview {
-  display: flex;
-  gap: 3rem;
-  justify-content: space-between;
+    transform: translateY(-200%) scaleX(0.8);
+    filter: blur(10px);
+  }
+
+  &:hover {
+    .trackItem__audioPlayer {
+      filter: blur(0);
+      transform: translateY(0) scaleX(1);
+    }
+  }
 }
