--- a/src/styles/components/page.module.scss
+++ b/src/styles/components/page.module.scss
@@ -1,7 +1,7 @@
 @use "@/styles/variables/breakpoints.scss" as *;
 @use "@/styles/variables/colors.scss" as *;
 
-$positionFromTop: 6rem;
+$positionFromTop: 4rem;
 
 .page {
   width: 100%;
@@ -9,28 +9,21 @@ $positionFromTop: 6rem;
   text-transform: uppercase;
   display: flex;
   flex-direction: column;
+  align-items: center;
+  justify-content: center;
   padding: 0.5rem;
-  position: fixed;
 
   & > :first-child {
-    width: 100%;
-    height: 100%;
-    position: relative;
     border-radius: 1rem;
-    background-color: #4b4b43;
-    padding-top: $positionFromTop;
-
-    overflow: hidden;
-    display: flex;
-    justify-content: center;
   }
 
   .backLink {
-    position: absolute;
+    position: fixed;
     display: flex;
     left: 1rem;
     z-index: 10;
     top: $positionFromTop;
     font-weight: 500;
+    top: 6.5rem;
   }
 }
