--- a/src/styles/pages/tracks.module.scss
+++ b/src/styles/pages/tracks.module.scss
@@ -1,27 +1,35 @@
-@use "../mixins/page.scss" as *;
+.title {
+  font-size: 3.5rem;
+  font-weight: 700;
+  letter-spacing: -0.06em;
+}
 
 .tracks {
   height: 100%;
   width: 100%;
-  position: relative;
+  position: fixed;
   display: flex;
   flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  gap: 1.5rem;
+  user-select: none;
 
-  &__header {
-    @include page-header-style;
-  }
-
-  &__filters {
-    @include page-filter-style;
-
-    & button.active {
-      color: #000;
-    }
+  &__timeRange {
+    display: flex;
+    gap: 0.625rem;
+    justify-content: center;
+    align-items: center;
+    width: 100%;
   }
 
   &__carousel {
-    height: 100%;
-    display: flex;
+    padding: 2rem 2rem;
+    width: 100%;
+  }
+
+  &__trackInfo {
+    position: relative;
     width: 100%;
   }
 }
