--- a/src/styles/globals.scss
+++ b/src/styles/globals.scss
@@ -5,13 +5,13 @@
 }
 
 :root {
-  --background: #e8e8e8;
+  // --background: #e8e8e8;
   --foreground: #171717;
 }
 
 @media (prefers-color-scheme: dark) {
   :root {
-    // --background: #131314;
+    --background: #131314;
     --foreground: #ededed;
   }
 }
@@ -20,14 +20,13 @@ html,
 body {
   height: 100%;
   overflow-x: hidden;
-  letter-spacing: -0.06em;
   line-height: 0.8;
   color-scheme: dark;
 }
 
 body {
   background: var(--background);
-  color: var(--foreground);
+  // color: var(--foreground);
   font-family: General Sans, Arial, Helvetica, sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
