--- a/src/components/SelectedTrack/SelectedTrack.module.scss
+++ b/src/components/SelectedTrack/SelectedTrack.module.scss
@@ -1,7 +1,7 @@
 .selectedTrack {
   display: flex;
   gap: 4rem;
-  position: relative;
+  position: absolute;
 
   &__vinyl {
     position: relative;
@@ -71,4 +71,8 @@
   margin-top: 0.5rem;
   line-height: 1;
   word-wrap: break-word;
+
+  &:hover {
+    text-decoration: underline;
+  }
 }
