minor tweaks and adjustments

--- a/src/components/SelectedTrack/SelectedTrack.module.scss
+++ b/src/components/SelectedTrack/SelectedTrack.module.scss
@@ -44,7 +44,7 @@
   font-weight: 600;
   align-items: center;
   gap: 4px;
-  color: white;
+  color: var(--foreground);
 
   .backIcon {
     width: 1rem;
