--- a/src/components/SelectedTrack/TrackDetails.module.scss
+++ b/src/components/SelectedTrack/TrackDetails.module.scss
@@ -8,6 +8,11 @@
     flex-direction: column;
     gap: 1.5rem;
     width: 100%;
+
+    & span {
+      font-weight: 500;
+      opacity: 0.8;
+    }
   }
 
   &__list {
@@ -23,10 +28,9 @@
     transition: all 80ms ease-in-out;
 
     &:hover {
-      background-color: rgba(255, 255, 255, 0.1);
+      background: rgba(var(--foreground), 0.9);
       border-radius: 4px;
       cursor: pointer;
-      margin-left: 2px;
     }
 
     span {
@@ -42,17 +46,20 @@
   &__image {
     border-radius: 50%;
     object-fit: cover;
+
+    img {
+      mix-blend-mode: difference;
+    }
   }
 
   &__pill {
     display: inline-block;
     padding: 0.25rem 0.5rem;
     border-radius: 4px;
-    font-size: 0.75rem;
     font-weight: 500;
-    color: white;
+    color: var(--foreground);
     width: fit-content;
-    border: 2px solid rgba(255, 255, 255, 0.2);
+    outline: 2px solid rgba(255, 255, 255, 0.2);
     letter-spacing: 0;
 
     &:hover {
@@ -75,7 +82,6 @@
     font-weight: 600;
     align-items: center;
     gap: 4px;
-    color: white;
 
     &:hover {
       transform: scale(1.1);
