--- a/src/components/SlidingButtonBar/SlidingButtonBar.module.scss
+++ b/src/components/SlidingButtonBar/SlidingButtonBar.module.scss
@@ -3,9 +3,9 @@
   display: flex;
   align-items: center;
   height: 2.75rem;
-  padding: 0 8px;
+  padding: 8px;
   border-radius: 0.5rem;
-  border: 2px solid rgba(38, 38, 38, 0.8);
+  border: 0.5px solid var(--foreground);
   backdrop-filter: blur(8px);
   width: fit-content;
 }
@@ -17,17 +17,17 @@
   z-index: -1;
   display: flex;
   overflow: hidden;
-  border-radius: 0.5rem;
   transition: all 0.3s ease;
 }
 
 .underlineInner {
   width: 100%;
-  height: 80%;
-  border-radius: 0.25rem;
-  background-color: rgba(229, 229, 229, 0.2);
+  height: 85%;
+  border-radius: 0.5rem;
+  background-color: var(--foreground);
   backdrop-filter: blur(8px);
   place-self: center;
+  mix-blend-mode: difference;
 }
 
 .tab {
@@ -36,21 +36,17 @@
   user-select: none;
   border: none;
   background: none;
-  padding: 0 1rem;
   font-size: 0.75rem;
   font-weight: 600;
   text-align: center;
-  color: white;
+  color: var(--foreground);
   text-transform: uppercase;
   transition: color 0.2s ease;
-
-  &:hover:not(.active) {
-    color: #d4d4d4;
-  }
+  height: min-content;
 }
 
 .active {
-  color: white;
+  color: var(--background);
 }
 
 .extra {
