--- a/src/components/CarouselTrackItem/CarouselTrackItem.module.scss
+++ b/src/components/CarouselTrackItem/CarouselTrackItem.module.scss
@@ -1,3 +1,5 @@
+@use "../../styles/variables/breakpoints.scss" as *;
+
 .carouselTrackItem {
   position: relative;
   box-sizing: border-box;
@@ -5,23 +7,31 @@
   img {
     width: 100%;
     transition: all 400ms cubic-bezier(0.33, 1, 0.68, 1);
+    border-radius: 4px;
   }
 
   &.hoveredItem {
     opacity: 1;
     border-radius: 4px;
     transition: all 400ms cubic-bezier(0.33, 1, 0.68, 1);
-    border: 0.5px solid rgba(255, 255, 255, 0.2);
+    border: 0.5px solid rgba(var(--foreground-rgb), 0.2);
 
     img {
       padding: 0.5rem;
+      border-radius: 8px;
 
-      border-radius: 4px;
+      @media screen and (max-width: $sm-breakpoint) {
+        padding: 0rem;
+      }
     }
 
     &:active {
       transform: scale(0.96);
       transition: all 100ms cubic-bezier(0.33, 1, 0.68, 1);
+
+      @media screen and (max-width: $sm-breakpoint) {
+        transform: scale(1);
+      }
     }
   }
   &:not(.hoveredItem) {
@@ -29,5 +39,10 @@
     margin-bottom: 1rem;
     filter: blur(2px);
     transition: all 400ms cubic-bezier(0.33, 1, 0.68, 1);
+
+    @media screen and (max-width: $sm-breakpoint) {
+      filter: blur(0px);
+      opacity: 1;
+    }
   }
 }
