--- a/src/components/SelectedTrack/SelectedTrack.module.scss
+++ b/src/components/SelectedTrack/SelectedTrack.module.scss
@@ -1,3 +1,5 @@
+@use "../../styles/variables/breakpoints.scss" as *;
+
 .selectedTrack {
   display: flex;
   gap: 4rem;
@@ -7,10 +9,13 @@
     position: relative;
     display: flex;
     flex-direction: column;
-    height: 100%;
     gap: 4rem;
     flex-shrink: 1;
     width: min-content;
+
+    @media screen and (max-width: $sm-breakpoint) {
+      gap: 2rem;
+    }
   }
 
   &__title {
@@ -19,6 +24,10 @@
     gap: 1rem;
     text-align: right;
     line-height: 1;
+
+    @media screen and (max-width: $sm-breakpoint) {
+      font-size: larger;
+    }
   }
 
   &__info {
@@ -27,6 +36,14 @@
     gap: 3.5rem;
     width: 100%;
     height: 400px;
+  }
+
+  @media screen and (max-width: $sm-breakpoint) {
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    width: 100%;
+    height: 100%;
   }
 }
 
@@ -63,16 +80,29 @@
     transition: transform 80ms ease-in-out;
     text-decoration: underline;
   }
+
+  @media screen and (max-width: $sm-breakpoint) {
+    position: absolute;
+    top: 4rem;
+    left: 0;
+    padding-bottom: 0;
+  }
 }
 
 .albumName {
   text-align: right;
-  opacity: 0.96;
+  opacity: 0.8;
   margin-top: 0.5rem;
   line-height: 1;
   word-wrap: break-word;
+  font-weight: 500;
 
   &:hover {
     text-decoration: underline;
+  }
+
+  @media screen and (max-width: $sm-breakpoint) {
+    font-size: 0.75rem;
+    margin-top: 4px;
   }
 }
