--- a/src/components/Vinyl/Vinyl.module.scss
+++ b/src/components/Vinyl/Vinyl.module.scss
@@ -1,6 +1,16 @@
+@use "../../styles/variables/breakpoints.scss" as *;
+
 .vinyl {
   position: relative;
   z-index: 0;
+  width: 400px;
+  height: 400px;
+
+  &__image {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+  }
 
   &__record {
     position: absolute;
@@ -20,6 +30,11 @@
       transition: transform 0.3s ease-in-out;
       z-index: 10;
     }
+  }
+
+  @media screen and (max-width: $sm-breakpoint) {
+    width: 350px;
+    height: 350px;
   }
 }
 
