dark mode hover border

--- a/src/components/CarouselTrackItem/CarouselTrackItem.module.scss
+++ b/src/components/CarouselTrackItem/CarouselTrackItem.module.scss
@@ -1,4 +1,5 @@
 @use "../../styles/variables/breakpoints.scss" as *;
+@use "../../styles/variables/colors.scss" as *;
 
 .carouselTrackItem {
   position: relative;
@@ -6,22 +7,21 @@
 
   img {
     width: 100%;
-    transition: all 400ms cubic-bezier(0.33, 1, 0.68, 1);
     border-radius: 4px;
+    transition: all 400ms cubic-bezier(0.33, 1, 0.68, 1);
   }
 
   &.hoveredItem {
     opacity: 1;
-    border-radius: 4px;
+    border: 0.5px solid rgba($black, 0.2);
     transition: all 400ms cubic-bezier(0.33, 1, 0.68, 1);
-    border: 0.5px solid rgba(var(--foreground-rgb), 0.2);
 
     img {
       padding: 0.5rem;
       border-radius: 8px;
 
       @media screen and (max-width: $sm-breakpoint) {
-        padding: 0rem;
+        padding: 0;
       }
     }
 
@@ -34,6 +34,7 @@
       }
     }
   }
+
   &:not(.hoveredItem) {
     opacity: 0.4;
     margin-bottom: 1rem;
@@ -41,8 +42,14 @@
     transition: all 400ms cubic-bezier(0.33, 1, 0.68, 1);
 
     @media screen and (max-width: $sm-breakpoint) {
-      filter: blur(0px);
       opacity: 1;
+      filter: none;
+    }
+  }
+
+  @media screen and (prefers-color-scheme: dark) {
+    &.hoveredItem {
+      border: 0.5px solid rgba($off-white, 0.2);
     }
   }
 }
