removing global uppercase rule

--- a/src/styles/pages/home.module.scss
+++ b/src/styles/pages/home.module.scss
@@ -21,8 +21,9 @@
     font-size: 8vw;
     font-weight: bold;
     display: inline-flex;
-    letter-spacing: -0.12em;
+    letter-spacing: -0.1em;
     user-select: none;
+    text-transform: lowercase;
   }
 
   .headphones {
