--- a/src/styles/pages/tracks.module.scss
+++ b/src/styles/pages/tracks.module.scss
@@ -6,6 +6,7 @@
   font-weight: 900;
   letter-spacing: -0.06em;
   margin-bottom: 2rem;
+  text-transform: uppercase;
 
   @media screen and (max-width: $sm-breakpoint) {
     font-size: 2rem;
