--- a/src/components/SelectedTrack/TrackDetails.module.scss
+++ b/src/components/SelectedTrack/TrackDetails.module.scss
@@ -18,6 +18,7 @@
     flex-direction: column;
     gap: 1.5rem;
     font-weight: 500;
+    text-transform: uppercase;
 
     h3 {
       font-weight: 500;
@@ -25,6 +26,7 @@
 
     & span {
       opacity: 0.8;
+      text-transform: capitalize;
     }
 
     @media screen and (max-width: $sm-breakpoint) {
@@ -51,6 +53,7 @@
     gap: 1rem;
     align-items: center;
     transition: all 80ms ease-in-out;
+    text-transform: none;
 
     &:hover {
       background: rgba(var(--foreground), 0.9);
@@ -61,6 +64,7 @@
     span {
       font-weight: 500;
       opacity: 0.8;
+      text-transform: none;
     }
 
     div {
