--- a/src/components/TrackInfo/TrackInfo.module.scss
+++ b/src/components/TrackInfo/TrackInfo.module.scss
@@ -1,11 +1,10 @@
 @use "../../styles/variables/breakpoints.scss" as *;
 
 .trackInfo {
-  line-height: 1.2;
+  line-height: 1.4;
   text-align: center;
   font-size: 1rem;
-  font-weight: 700;
-  letter-spacing: 0em;
+  font-weight: 800;
   display: flex;
   flex-direction: column;
   width: 100%;
@@ -20,8 +19,11 @@
     white-space: nowrap;
     overflow: hidden;
     text-overflow: ellipsis;
+    text-transform: uppercase;
+
     &:not(:first-child) {
-      font-weight: 400;
+      font-weight: 500;
+      font-size: 0.875rem;
     }
   }
 
@@ -31,7 +33,8 @@
     right: 2rem;
     font-weight: 500;
     font-size: 1rem;
-    opacity: 0.4;
+    opacity: 0.6;
+    text-transform: uppercase;
 
     @media screen and (max-width: $sm-breakpoint) {
       display: none;
