--- a/src/components/SelectedTrack/SelectedTrack.module.scss
+++ b/src/components/SelectedTrack/SelectedTrack.module.scss
@@ -27,6 +27,11 @@
 
     @media screen and (max-width: $sm-breakpoint) {
       font-size: larger;
+
+      img {
+        width: 1.5rem;
+        height: 1.5rem;
+      }
     }
   }
 
@@ -103,6 +108,6 @@
 
   @media screen and (max-width: $sm-breakpoint) {
     font-size: 0.75rem;
-    margin-top: 4px;
+    margin-top: 2px;
   }
 }
