--- a/src/components/SlidingButtonBar/SlidingButtonBar.module.scss
+++ b/src/components/SlidingButtonBar/SlidingButtonBar.module.scss
@@ -1,3 +1,5 @@
+@use "../../styles/variables/colors.scss" as *;
+
 .container {
   position: relative;
   display: flex;
@@ -5,9 +7,13 @@
   height: 2.75rem;
   padding: 8px;
   border-radius: 0.5rem;
-  border: 0.5px solid var(--foreground);
+  border: 0.5px solid rgba($black, 0.2);
   backdrop-filter: blur(8px);
   width: fit-content;
+
+  @media screen and (prefers-color-scheme: dark) {
+    border: 0.5px solid rgba($off-white, 0.2);
+  }
 }
 
 .underline {
@@ -24,10 +30,14 @@
   width: 100%;
   height: 85%;
   border-radius: 0.5rem;
-  background-color: var(--foreground);
+  background-color: rgba($black, 1);
   backdrop-filter: blur(8px);
   place-self: center;
   mix-blend-mode: difference;
+
+  @media screen and (prefers-color-scheme: dark) {
+    background-color: rgba($off-white, 1);
+  }
 }
 
 .tab {
@@ -39,14 +49,21 @@
   font-size: 0.75rem;
   font-weight: 600;
   text-align: center;
-  color: var(--foreground);
+  color: $black;
   text-transform: uppercase;
   transition: color 0.2s ease;
   height: min-content;
+
+  @media screen and (prefers-color-scheme: dark) {
+    color: $off-white;
+  }
 }
 
 .active {
-  color: var(--background);
+  color: $off-white;
+  @media screen and (prefers-color-scheme: dark) {
+    color: $black;
+  }
 }
 
 .extra {
