--- a/src/styles/globals.scss
+++ b/src/styles/globals.scss
@@ -1,77 +1,4 @@
-@font-face {
-  font-family: "General Sans";
-  src: url("/fonts/GeneralSans-Variable.woff2") format("woff2"),
-    url("/fonts/GeneralSans-Variable.woff") format("woff");
-}
-
-:root {
-  --background: #e8e8e8;
-  --foreground: #171717;
-  --tab-active: var(--foreground);
-  --tab-border: rgba(38, 38, 38, 0.8);
-}
-
-@media (prefers-color-scheme: dark) {
-  :root {
-    --background: #131314;
-    --foreground: #ededed;
-  }
-}
-
-html,
-body {
-  height: 100%;
-  overflow-x: hidden;
-  line-height: 0.8;
-  color-scheme: dark;
-}
-
-body {
-  background: var(--background);
-  color: var(--foreground);
-  font-family: General Sans, Arial, Helvetica, sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
-
-  box-sizing: border-box;
-  position: relative;
-  overflow: hidden;
-
-  img {
-    border-radius: 4px;
-  }
-}
-
-* {
-  box-sizing: border-box;
-  margin: 0;
-}
-
-a {
-  color: inherit;
-  text-decoration: none;
-}
-
-@media (prefers-color-scheme: dark) {
-  html {
-    color-scheme: dark;
-  }
-}
-
-button {
-  font-family: General Sans, Arial, Helvetica, sans-serif;
-  font-size: 1rem;
-  font-weight: 500;
-  padding: 0.5rem 1rem;
-  background: none;
-  border: none;
-  cursor: pointer;
-  transition: all 0.1s ease;
-  color: var(--background);
-  text-transform: uppercase;
-  outline: none;
-
-  &:active {
-    transform: scale(0.98);
-  }
-}
+@use "base/globals.scss";
+@use "base/root.scss";
+@use "variables/colors.scss";
+@use "variables/breakpoints.scss";
