--- a/src/components/Header/Header.module.scss
+++ b/src/components/Header/Header.module.scss
@@ -15,6 +15,7 @@ $border-radius: 4px;
   font-weight: 700;
   z-index: 1000;
   user-select: none;
+  box-sizing: border-box;
 
   &__left {
     display: flex;
