--- a/src/styles/pages/artists.module.scss
+++ b/src/styles/pages/artists.module.scss
@@ -26,16 +26,6 @@
   &__carousel {
     padding: 2rem 2rem;
     width: 100%;
+    overflow: hidden;
   }
-}
-
-.sharedImageContainer {
-  position: absolute;
-  top: 0;
-  left: 50%;
-  // pointer-events: none; // so it doesn’t block UI
-  z-index: 1000; // above everything else
-  width: 100%;
-  height: 100%;
-  transform: translateX(-50%);
 }
