--- a/src/styles/base/_globals.scss
+++ b/src/styles/base/_globals.scss
@@ -16,7 +16,12 @@ html {
 }
 
 body {
-  height: 100%;
+  height: 100vh;
   background: var(--background);
   font-family: General Sans, Arial, Helvetica, sans-serif;
+}
+
+a {
+  text-decoration: none;
+  color: inherit;
 }
