--- a/src/styles/components/page.module.scss
+++ b/src/styles/components/page.module.scss
@@ -9,6 +9,7 @@ $positionFromTop: 4rem;
   display: flex;
   flex-direction: column;
   align-items: center;
+  align-self: center;
   justify-content: center;
   padding: 0.5rem;
 
