--- a/src/components/SelectedArtist/SelectedArtist.module.scss
+++ b/src/components/SelectedArtist/SelectedArtist.module.scss
@@ -1,124 +1,56 @@
 @use "../../styles/variables/breakpoints.scss" as *;
-@use "../../styles/variables/colors.scss" as *;
+@use "../../styles/variables/_colors.scss" as *;
+@use "../../styles/mixins/_selectedItem.scss" as *;
 
 .selectedArtist {
-  display: grid;
-  grid-template-columns: min-content 350px 1fr;
-  gap: 2rem;
-  position: absolute;
-  max-width: 1000px;
-  height: 580px;
+  @include selectedItem(400px);
 
-  &__cover {
-    position: sticky;
-    top: 0;
+  &__latestRelease {
     display: flex;
     flex-direction: column;
-    gap: 4rem;
-    flex-shrink: 1;
-    width: min-content;
-    justify-content: space-between;
+    gap: 0.5rem;
+    color: $black;
 
-    @media screen and (max-width: $sm-breakpoint) {
-      gap: 2rem;
+    & > :first-child {
+      font-size: 1.25rem;
+      font-weight: 500;
     }
-  }
 
-  &__image {
-    width: 350px;
-    height: 350px;
-    object-fit: cover;
-    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+    & > :last-child {
+      display: flex;
+      gap: 0.5rem;
+      justify-content: space-between;
+      height: 100%;
+    }
 
     @media screen and (prefers-color-scheme: dark) {
-      box-shadow: 0 0 32px rgba(255, 255, 255, 0.1);
+      color: $off-white;
     }
   }
 
-  &__title {
+  &__latestReleaseImage {
+    width: 48px;
+    height: 48px;
+    border-radius: 0.25rem;
+  }
+
+  &__latestReleaseName {
+    & > :first-child {
+      display: flex;
+      align-items: center;
+      justify-content: space-evenly;
+      gap: 1rem;
+      font-weight: 500;
+      font-size: 1.125rem;
+    }
     display: flex;
+    flex-direction: column;
     justify-content: space-between;
-    gap: 1rem;
-    text-align: right;
-    line-height: 1;
-    width: 100%;
+  }
 
-    @media screen and (max-width: $sm-breakpoint) {
-      font-size: larger;
-
-      img {
-        width: 1.5rem;
-        height: 1.5rem;
-      }
+  @media screen and (max-width: $sm-breakpoint) {
+    &__releaseRadar {
+      display: none;
     }
   }
-
-  &__info {
-    display: flex;
-    flex-direction: column;
-    gap: 3.5rem;
-    width: 100%;
-    height: 400px;
-  }
-
-  @media screen and (max-width: $sm-breakpoint) {
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
-    width: 100%;
-    height: 100%;
-  }
-}
-
-.backLink {
-  background: none;
-  border: none;
-  height: fit-content;
-  z-index: 10;
-  display: flex;
-  cursor: pointer;
-  padding-top: 0;
-  padding-right: 0;
-  opacity: 0.8;
-  position: sticky;
-  top: 0;
-
-  font-weight: 600;
-  align-items: center;
-  gap: 4px;
-  color: $black;
-
-  @media screen and (prefers-color-scheme: dark) {
-    color: $off-white;
-  }
-
-  .backIcon {
-    width: 1rem;
-    height: 1rem;
-  }
-
-  &:hover {
-    transform: scale(1.1);
-    transition: transform 0.1s ease-in-out;
-    text-decoration: underline;
-    opacity: 1;
-  }
-
-  &:active {
-    transform: scale(0.8);
-    transition: transform 80ms ease-in-out;
-    text-decoration: underline;
-  }
-
-  @media screen and (max-width: $sm-breakpoint) {
-    position: absolute;
-    top: 4rem;
-    left: 0;
-    padding-bottom: 0;
-  }
-}
-
-.skeletonContainer {
-  display: flex;
-  width: 4rem;
 }
