--- a/src/components/Vinyl/Vinyl.module.scss
+++ b/src/components/Vinyl/Vinyl.module.scss
@@ -60,7 +60,9 @@
     opacity: 1;
 
     @media screen and (max-width: $sm-breakpoint) {
-      width: 0.5rem;
+      width: 1rem;
+      height: 1rem;
+      object-fit: cover;
     }
   }
 }
