--- a/src/styles/pages/tracks.module.scss
+++ b/src/styles/pages/tracks.module.scss
@@ -1,19 +1,5 @@
 @use "../../styles/variables/breakpoints.scss" as *;
 
-.title {
-  font-size: 3.5rem;
-  text-align: center;
-  font-weight: 900;
-  letter-spacing: -0.06em;
-  margin-bottom: 2rem;
-  text-transform: uppercase;
-
-  @media screen and (max-width: $sm-breakpoint) {
-    font-size: 2rem;
-    margin-bottom: 0rem;
-  }
-}
-
 .tracks {
   height: 100%;
   width: 100%;
@@ -40,6 +26,20 @@
   &__trackInfo {
     position: relative;
     width: 100%;
+  }
+
+  &__title {
+    font-size: 3.5rem;
+    text-align: center;
+    font-weight: 900;
+    letter-spacing: -0.06em;
+    margin-bottom: 2rem;
+    text-transform: uppercase;
+
+    @media screen and (max-width: $sm-breakpoint) {
+      font-size: 2rem;
+      margin-bottom: 0rem;
+    }
   }
 
   @media screen and (max-width: $sm-breakpoint) {
