--- a/src/styles/pages/home.module.scss
+++ b/src/styles/pages/home.module.scss
@@ -1,70 +1,95 @@
 @use "@/styles/variables/breakpoints.scss" as *;
+@use "@/styles/variables/colors.scss" as *;
 
-.home {
-  align-items: center;
+.homePage {
+  width: 100%;
+  height: 100dvh;
+  position: relative;
   display: flex;
   flex-direction: column;
   justify-content: center;
-  position: relative;
-  user-select: none;
+  align-items: center;
+  justify-self: center;
+  box-sizing: border-box;
+  padding: 20vh 1rem 2rem 1rem;
+  gap: 1rem;
+  overflow: hidden;
 
-  .desc {
-    font-weight: 500;
-    font-size: 1rem;
-    margin-bottom: 0.75rem;
-  }
-
-  h1.blendify {
-    margin: 0;
-    margin-block-start: 0;
-    margin-inline-start: -1vw;
-    font-size: 8vw;
-    font-weight: bold;
-    display: inline-flex;
-    letter-spacing: -0.1em;
-    user-select: none;
-    text-transform: lowercase;
-  }
-
-  .headphones {
-    width: 300px;
-    height: 300px;
-    margin-top: -15%;
-  }
-
-  .links {
+  &__content {
     display: flex;
-    gap: 16px;
-    margin-bottom: 2.5rem;
-  }
-
-  .button {
-    display: flex;
-    padding: 8px 16px;
-    justify-content: center;
+    flex-direction: column;
     align-items: center;
-    gap: 16px;
-    border-radius: 2rem;
-    border: 1px solid rgb(245, 242, 236);
-    background: rgba(24, 24, 27, 0.1);
-    backdrop-filter: blur(8px);
-    font-weight: 500;
-    font-size: 0.75rem;
-    letter-spacing: normal;
-    transition: all 100ms cubic-bezier(0.25, 1, 0.5, 1);
+    justify-content: center;
+    gap: 0.5rem;
 
-    &:hover {
-      background: rgba(24, 24, 27, 0.2);
-      scale: 1.05;
-      text-decoration: underline;
+    .blendify {
+      margin: 0;
+      margin-block-start: 0;
+      margin-inline-start: -1vw;
+      font-size: clamp(4rem, 8vw, 6rem);
+      font-weight: 700;
+      display: inline-flex;
+      letter-spacing: -0.08em;
+      user-select: none;
     }
   }
 
-  p {
-    font-size: 1rem;
-    font-weight: 500;
-    margin-bottom: 1rem;
-    letter-spacing: normal;
-    opacity: 0.8;
+  @media screen and (min-width: $sm-breakpoint) {
+    padding: 0;
+    gap: 4rem;
+  }
+}
+
+.headphones {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  height: 200px;
+  flex-grow: 1;
+  position: relative;
+  box-sizing: border-box;
+}
+
+.homePageLinks {
+  display: flex;
+  flex-direction: column;
+  gap: 0.5rem;
+  width: 100%;
+  height: 100%;
+  place-content: flex-end;
+
+  a {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    border-radius: 0.75rem;
+    background: rgba($gray-dark, 0.1);
+    height: 64px;
+    width: 100%;
+    font-weight: 600;
+    transition: all 100ms ease-in-out;
+
+    &:hover {
+      scale: 1.02;
+      background: rgba($gray-dark, 0.2);
+      transform: translateY(-2px);
+    }
+
+    &:active {
+      scale: 0.98;
+      background: rgba($gray-dark, 0.3);
+    }
+  }
+
+  @media screen and (min-width: $sm-breakpoint) {
+    flex-direction: row;
+    width: 40%;
+    height: fit-content;
+  }
+
+  @media screen and (prefers-color-scheme: dark) {
+    a {
+      background: rgba($gray-dark, 1);
+    }
   }
 }
