--- a/src/components/SelectedTrack/SelectedTrack.module.scss
+++ b/src/components/SelectedTrack/SelectedTrack.module.scss
@@ -6,7 +6,6 @@ $image-height: 380px;
 .selectedTrack {
   @include selectedItem($image-height);
   width: auto;
-  // max-width: 800px;
   height: auto;
 
   &__title {
@@ -51,11 +50,6 @@ $image-height: 380px;
     aspect-ratio: 1 / 1;
     border-radius: 0.5rem;
     object-fit: cover;
-
-    // @media screen and (max-width: $sm-breakpoint) {
-    //   width: $image-height / 2;
-    //   height: $image-height / 2;
-    // }
   }
 
   &__artists {
@@ -73,15 +67,15 @@ $image-height: 380px;
   }
 
   &__artistImage {
-    width: 100px;
-    height: 100px;
+    width: 80px;
+    height: 80px;
     aspect-ratio: 1 / 1;
     border-radius: 0.5rem;
     object-fit: cover;
 
     @media screen and (max-width: $sm-breakpoint) {
-      width: $image-height / 2;
-      height: $image-height / 2;
+      width: $image-height / 3;
+      height: $image-height / 3;
     }
   }
 
@@ -95,9 +89,19 @@ $image-height: 380px;
 
   @media screen and (max-width: $sm-breakpoint) {
     flex-direction: column;
-    align-items: center;
+    align-items: flex-start;
     justify-content: center;
     width: 100%;
-    height: 100%;
+    gap: 1rem;
+
+    &__cover {
+      width: 240px;
+      height: 240px;
+    }
+
+    &__artistImage {
+      width: 80px;
+      height: 80px;
+    }
   }
 }
