--- a/src/styles/components/page.module.scss
+++ b/src/styles/components/page.module.scss
@@ -5,7 +5,7 @@ $positionFromTop: 4rem;
 
 .page {
   width: 100%;
-  height: 100dvh;
+  min-height: 100vh;
   display: flex;
   flex-direction: column;
   align-items: center;
