--- a/src/styles/pages/tracks.module.scss
+++ b/src/styles/pages/tracks.module.scss
@@ -29,6 +29,7 @@
 
   &__carousel {
     width: 100%;
+    padding: 0 1rem;
   }
 
   &__trackInfo {
@@ -41,7 +42,6 @@
     text-align: center;
     font-weight: 900;
     letter-spacing: -0.06em;
-    margin-bottom: 2rem;
     text-transform: uppercase;
 
     @media screen and (max-width: $sm-breakpoint) {
