--- a/src/styles/components/page.module.scss
+++ b/src/styles/components/page.module.scss
@@ -4,7 +4,8 @@
 $positionFromTop: 4rem;
 
 .page {
-  width: 100%;
+  width: 100dvh;
+  width: 100vw;
   min-height: 100vh;
   display: flex;
   flex-direction: column;
