--- a/src/styles/mixins/_selectedItem.scss
+++ b/src/styles/mixins/_selectedItem.scss
@@ -3,16 +3,20 @@
 
 @mixin selectedItem($image-height: 300px) {
   display: grid;
-  grid-template-columns: min-content $image-height 1fr;
+  grid-template-columns: min-content $image-height min-content;
   grid-template-rows: 1fr min-content;
   height: 600px;
   gap: 2rem;
   position: absolute;
-  max-width: 900px;
   width: 100%;
   box-sizing: border-box;
   transition: all 0.2s ease-in-out;
   z-index: 10;
+  overflow: hidden;
+
+  & > :nth-child(3) {
+    max-width: 400px;
+  }
 
   // Cover Image + Name Block
   &__cover {
@@ -205,7 +209,6 @@
   @media screen and (max-width: $sm-breakpoint) {
     display: flex;
     flex-direction: column;
-    // width: 96%;
     padding: 0 1rem;
     gap: 0.5rem;
     position: fixed;
