--- a/src/styles/mixins/_selectedItem.scss
+++ b/src/styles/mixins/_selectedItem.scss
@@ -16,6 +16,7 @@
 
   & > :nth-child(3) {
     max-width: 400px;
+    min-width: 240px;
   }
 
   // Cover Image + Name Block
@@ -49,7 +50,7 @@
     font-size: 2.5rem;
     font-weight: bold;
     text-transform: uppercase;
-    line-height: 0.9;
+    line-height: 1;
     overflow: hidden;
     text-overflow: ellipsis;
     white-space: normal;
