--- a/src/components/CarouselTrackItem/CarouselTrackItem.module.scss
+++ b/src/components/CarouselTrackItem/CarouselTrackItem.module.scss
@@ -9,6 +9,7 @@
     width: 100%;
     border-radius: 4px;
     transition: all 400ms cubic-bezier(0.33, 1, 0.68, 1);
+    clip-path: none;
   }
 
   &.hoveredItem {
