--- a/src/components/Header/Header.module.scss
+++ b/src/components/Header/Header.module.scss
@@ -22,6 +22,7 @@ $border-radius: 4px;
     align-items: center;
     gap: 8px;
     font-size: larger;
+    letter-spacing: -0.06em;
 
     a {
       transition: transform 200ms ease-in-out;
