--- a/src/components/SelectedTrack/SelectedTrack.module.scss
+++ b/src/components/SelectedTrack/SelectedTrack.module.scss
@@ -5,8 +5,9 @@ $image-height: 380px;
 
 .selectedTrack {
   @include selectedItem($image-height);
-  width: auto;
   height: auto;
+  place-content: center;
+  grid-template-rows: none;
 
   &__title {
     display: flex;
@@ -95,6 +96,11 @@ $image-height: 380px;
     height: 400px;
   }
 
+  &__image {
+    border-radius: 100%;
+    clip-path: circle(45% at 50% 50%);
+  }
+
   @media screen and (max-width: $sm-breakpoint) {
     flex-direction: column;
     align-items: flex-start;
@@ -110,6 +116,13 @@ $image-height: 380px;
     &__artistImage {
       width: 80px;
       height: 80px;
+    }
+
+    &__image {
+      scale: 1;
+      width: 100%;
+      height: auto;
+      border-radius: 0;
     }
   }
 }
