--- a/src/components/Carousel/Carousel.module.scss
+++ b/src/components/Carousel/Carousel.module.scss
@@ -14,6 +14,11 @@
   position: relative;
   padding: 0;
 
+  &:active {
+    cursor: grabbing;
+    user-select: none;
+  }
+
   &::-webkit-scrollbar {
     display: none;
   }
