--- a/src/components/Vinyl/Vinyl.module.scss
+++ b/src/components/Vinyl/Vinyl.module.scss
@@ -6,15 +6,11 @@
   aspect-ratio: 1 / 1;
   flex: 0 0 auto;
   position: relative;
-  transition: all 0.2s ease-in-out;
-
-  &__container {
-    position: relative;
-    width: 100%;
-    height: 100%;
-    border-radius: 1rem;
-    overflow: hidden;
-  }
+  transition: all 0.1s ease-in-out;
+  overflow: hidden;
+  cursor: pointer;
+  background: rgba($gray-light, 0.4);
+  border-radius: 0.25rem;
 
   &__image {
     width: 100%;
@@ -22,47 +18,35 @@
     object-fit: cover;
     display: block;
     border-radius: inherit;
-  }
-
-  &__record {
-    position: absolute;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
     clip-path: circle(45% at 50% 50%);
-    animation: spin 20s linear infinite;
+    animation: spin 10s linear infinite;
     animation-play-state: paused;
-    z-index: 1;
-
-    &--playing {
-      animation-play-state: running;
-    }
   }
 
-  &__overlay {
-    width: 100%;
-    height: 100%;
-    object-fit: contain;
-    pointer-events: none;
+  &__image--playing {
+    animation-play-state: running;
   }
-
-  &__spotifyIcon {
+  &__centerDot {
     position: absolute;
-    top: 0.5rem;
-    left: 0.5rem;
-    width: 2rem;
-    height: 2rem;
+    top: 50%;
+    left: 50%;
+    width: 20px;
+    height: 20px;
+    background-color: transparent;
+    border: 6px solid rgba($off-white, 0.6);
+    border-radius: 50%;
+    box-sizing: border-box;
+    transform: translate(-50%, -50%);
+    z-index: 2;
+  }
+}
 
-    aspect-ratio: 1 / 1;
-    z-index: 10;
-    opacity: 1;
-
-    @media screen and (max-width: $sm-breakpoint) {
-      width: 1rem;
-      height: 1rem;
-      object-fit: cover;
-    }
+@keyframes spin {
+  from {
+    transform: rotate(0deg);
+  }
+  to {
+    transform: rotate(360deg);
   }
 }
 
@@ -111,22 +95,4 @@
       transition: all 80ms ease-in-out;
     }
   }
-}
-
-@keyframes spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
-}
-
-.rotating {
-  animation: spin linear 10s infinite;
-  animation-play-state: running;
-}
-
-.paused {
-  animation-play-state: paused;
 }
