--- a/src/styles/pages/login.module.scss
+++ b/src/styles/pages/login.module.scss
@@ -3,9 +3,12 @@
   height: 100%;
   display: flex;
   flex-direction: column;
-  gap: 4rem;
+  justify-content: space-between;
+  height: 100vh;
+  // gap: 4rem;
 
   place-content: center;
+  border: 3px sold green;
 
   &__title {
     display: flex;
@@ -16,7 +19,6 @@
     font-weight: 500;
     font-style: normal;
     letter-spacing: -2.2vw;
-    text-transform: uppercase;
     gap: 8px;
   }
 
