--- a/src/styles/pages/genres.module.scss
+++ b/src/styles/pages/genres.module.scss
@@ -1,100 +1,197 @@
-$selectedColor: #ffb327;
+@use "../../styles/variables/colors.scss" as *;
+@use "../../styles/variables/breakpoints.scss" as *;
+
+$bar-spacing: 1.5rem;
 
 .genres {
-  height: 100%;
-  width: 100%;
-  position: relative;
-  user-select: none;
-  display: flex;
-  flex-direction: column;
-  max-width: 1400px;
+  gap: 2rem !important;
+  padding: 0 1rem;
 
-  &__header {
-    width: 94%;
-    height: fit-content;
-    position: relative;
-    margin-top: 8rem;
-    padding-left: 10rem;
+  &__container {
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    grid-template-rows: 1fr 1fr min-content;
+    gap: 2rem;
+    width: 80%;
 
-    h1 {
-      font-size: 3.5rem;
-      font-weight: 600;
-      line-height: 0.8;
-      letter-spacing: -4px;
-      margin-bottom: 8px;
-    }
-
-    & > :nth-child(2) {
-      color: rgba(255, 255, 255, 0.6);
-      font-size: 1rem;
-      font-weight: 500;
-      line-height: 100%;
-      letter-spacing: -0.8px;
-      opacity: 0.6;
-      position: relative;
-
+    @media screen and (max-width: $sm-breakpoint) {
       display: flex;
-      justify-content: space-between;
+      flex-direction: column;
+      gap: 1rem;
     }
   }
 
-  &__info {
-    width: 100%;
-    height: 100%;
-    display: flex;
-    // align-items: center;
-    padding-left: 10rem;
-    padding-right: 8rem;
-    padding-top: 4rem;
-    position: relative;
-    gap: 1.5rem;
-    line-height: 1;
+  &__icon {
+    width: 100px;
+    height: 100px;
+    border-radius: 8px;
+    background: $gray-dark;
+    padding: 1rem;
+
+    @media screen and (max-width: $sm-breakpoint) {
+      width: 60px;
+      height: 60px;
+    }
+  }
+
+  &__topGenre {
+    grid-row: 2/-1;
+    grid-column: 1/1;
+    font-size: 1.75rem;
+    font-weight: 600;
+    background-clip: text;
+    -webkit-background-clip: text;
+    color: transparent;
+    background-image: linear-gradient(to right, #f7924b, #facc15);
+
+    @media screen and (min-width: $sm-breakpoint) {
+      font-size: clamp(2rem, 3vw, 2.5rem);
+      line-height: 1;
+    }
+
+    @media screen and (max-width: $sm-breakpoint) {
+      line-height: 0.9;
+    }
+  }
+
+  &__coloredText {
+    background-clip: text;
+    -webkit-background-clip: text;
+    color: transparent;
+    background-image: linear-gradient(to right, #f97316, #facc15);
+    font-weight: 700;
+  }
+
+  &__description {
+    grid-row: 3/-1;
+    grid-column: 1/1;
+    font-size: 1.125rem;
     font-weight: 500;
 
-    & .content {
-      justify-content: space-between;
-      gap: 2rem;
-      width: 100%;
-      height: 100%;
-      display: flex;
+    @media screen and (min-width: $sm-breakpoint) {
+      width: 75%;
+    }
 
-      & > * {
-        width: 100%;
-      }
-
-      & > :first-child {
-        max-width: 500px;
-      }
+    @media screen and (max-width: $sm-breakpoint) {
+      font-size: 1rem;
     }
   }
 
-  &__filters {
-    height: 10px;
-    right: 21.5rem;
-    top: 11rem;
-    z-index: 40000;
-    position: absolute;
+  &__data {
+    grid-row: 2/-1;
+    grid-column: 2/-1;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+
+    @media screen and (min-width: $sm-breakpoint) {
+      grid-row: 1/-1;
+      width: 100%;
+    }
   }
 
-  &__chart {
+  @media screen and (max-width: $sm-breakpoint) {
+    flex-direction: column !important;
+    align-items: center;
+  }
+
+  &__bars {
+    display: grid;
+    grid-template-columns: 1fr;
+    grid-template-rows: repeat(5, 1fr);
+    gap: $bar-spacing/2;
+    padding-left: $bar-spacing/2;
+    border: 5px solid orange;
+
+    @media screen and (prefers-color-scheme: dark) {
+      border-left: 4px solid $gray-light;
+    }
+
+    @media screen and (max-width: $sm-breakpoint) {
+    }
+  }
+
+  &__bar {
+    display: grid;
+    gap: 4px;
+    width: 100%;
+    align-items: center;
+
+    @media screen and (max-width: $sm-breakpoint) {
+      flex-direction: row;
+    }
+  }
+
+  &__barContainer {
+    border-radius: 0.25rem;
+    background-color: $gray-light;
+    height: $bar-spacing * 1.25;
     width: 100%;
     display: flex;
-    justify-content: flex-end;
+    justify-self: end;
+    position: relative;
+  }
+
+  &__barPercentage {
+    position: absolute;
+    right: 8px;
+    top: 2px;
+    color: $gray-dark;
+    font-weight: 600;
+    font-size: 1.125rem;
+  }
+
+  &__label {
+    width: 100%;
+    overflow: hidden;
+    white-space: nowrap;
+    text-overflow: ellipsis;
+    text-align: left;
+    font-size: 1.125rem;
+    font-weight: 500;
+
+    @media screen and (max-width: $sm-breakpoint) {
+      font-size: 0.875rem;
+    }
+  }
+
+  &__barFill {
+    border-radius: 0.25rem;
+    height: 100%;
+    transform-origin: bottom;
+    will-change: width;
+    position: relative;
+
+    background: linear-gradient(to right, #4ade80, #22d3ee);
+  }
+
+  &__title {
+    font-size: 3.5rem;
+    text-align: center;
+    font-weight: 900;
+    letter-spacing: -0.06em;
+    text-transform: uppercase;
+    margin-bottom: 4rem;
+
+    @media screen and (max-width: $sm-breakpoint) {
+      font-size: 2rem;
+      margin-bottom: 0rem;
+    }
   }
 }
 
-.selected {
-  transition: all 200ms ease-out;
-  border: 3px solid $selectedColor;
-  padding: 4px;
+.barFill--0 {
+  background: linear-gradient(to right, #f97316, #facc15);
 }
-
-.selectedGenre {
-  color: $selectedColor;
+.barFill--1 {
+  background: linear-gradient(to right, #fbbf24, #fde68a); // soft amber
 }
-
-.filters {
-  position: absolute;
-  right: -2rem;
-  top: -1rem;
+.barFill--2 {
+  background: linear-gradient(to right, #ec4899, #ef4444);
+}
+.barFill--3 {
+  background: linear-gradient(to right, #14b8a6, #06b6d4);
+}
+.barFill--4 {
+  background: linear-gradient(to right, #8b5cf6, #a855f7);
 }
